<resources>
    <string name="app_name">Pocket projects</string>
    <string name="projects">Projects</string>
    <string name="statistics">Statistics</string>
    <string name="trash_bin">Trash bin</string>
    <string name="todo">TODO</string>
    <string name="doing">DOING</string>
    <string name="done">DONE</string>
    <string name="task">Task</string>
    <string name="create_task">Create task</string>
    <string name="create_project">Create project</string>
    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="delete_task">Delete</string>
    <string name="mark_as_important">Important</string>
    <string name="move_to_todo">Move to TODO</string>
    <string name="move_to_done">Move to DONE</string>
    <string name="move_to_doing">Move to DOING</string>
    <string name="crossed_out">Crossed out</string>
    <string name="important">Important</string>
    <string name="archive">Archive</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_project">Delete</string>
    <string name="restore">Restore</string>
</resources>