<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/groupProjects"
        android:checkableBehavior="single">
        <item
            android:id="@+id/projectsFragment"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_projects"
            android:title="@string/projects" />
        <item
            android:id="@+id/statisticsFragment"
            android:checkable="true"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics" />
    </group>

    <group>
        <item
            android:id="@+id/archiveFragment"
            android:checkable="true"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive" />
        <item
            android:id="@+id/trashFragment"
            android:checkable="true"
            android:icon="@drawable/ic_delete"
            android:title="@string/trash_bin" />
    </group>
</menu>